--- a/3 periodo/EDO_Resumo.tex
+++ b/3 periodo/EDO_Resumo.tex
@@ -48,7 +48,7 @@
 \vfill
 \begin{center}
 {{\normalsize Rio de Janeiro}\\
-{\normalsize 2021}}
+{\normalsize \the\year}}
 \end{center}
 \end{titlepage}
 
