--- a/3 periodo/EDO_Resumo.tex
+++ b/3 periodo/EDO_Resumo.tex
@@ -48,7 +48,7 @@
 \vfill
 \begin{center}
 {{\normalsize Rio de Janeiro}\\
-{\normalsize \the\year}}
+{\normalsize 2021}}
 \end{center}
 \end{titlepage}
 
