Add pdfs and fix date

--- a/3 periodo/Teoria_da_Probabilidade.tex
+++ b/3 periodo/Teoria_da_Probabilidade.tex
@@ -47,7 +47,7 @@
 \vfill
 \begin{center}
 {{\normalsize Rio de Janeiro}\\
-{\normalsize \the\year}}
+{\normalsize 2021}}
 \end{center}
 \end{titlepage}
 
@@ -238,7 +238,7 @@ Dois eventos (não impossíveis) A e B são ditos \textbf{independentes} se o co
 $$P(B|A) = P(B)$$
 \end{definition}
 
-\section{2 Variáveis Aleatórias Discretas}
+\section*{2 Variáveis Aleatórias Discretas}
 \label{s4}
 
 \subsection*{2.1 Função de Probabilidade e Função de Probabilidade Conjunta}
@@ -435,16 +435,16 @@ Se X e Y são independentes, então $E(X Y) = E(X) E(Y)$.
     $$\rho (a X + b, Y) = - \rho (X, Y) \text{ se } a < 0$$
 \end{corollary}
 
-\section{3 Principais Distribuições Discretas}
+\section*{3 Principais Distribuições Discretas}
 \label{s10}
 
-\subsection{Distribuição}
+\subsubsection*{Distribuição}
 Se os valores assumidos por uma certa variável aleatória X são equiprováveis dizemos que X tem um \textbf{distribuição uniforme}.
 
-\subsection{Brevíssima Revisão de Analise Combinatória}
+\subsubsection*{Brevíssima Revisão de Analise Combinatória}
 Aqui trata-se de conteúdo do ensino médio em caso de dúvida \href{https://pt.wikipedia.org/wiki/Combinat\%C3\%B3ria}{see}.
 
-\subsection{3.1 Processo de Bernoulli}
+\subsection*{3.1 Processo de Bernoulli}
 \label{s11}
 
 \begin{definition}
@@ -457,7 +457,7 @@ Aqui trata-se de conteúdo do ensino médio em caso de dúvida \href{https://pt.
     \end{enumerate}
 \end{definition}
 
-\subsubsection*{3.2 Distribuição Binomial}
+\subsection*{3.2 Distribuição Binomial}
 \label{s12}
 
 \begin{definition}
@@ -483,7 +483,7 @@ Aqui trata-se de conteúdo do ensino médio em caso de dúvida \href{https://pt.
     $$Var (X) = n p q$$
 \end{corollary}
 
-\subsubsection*{3.3 Distribuição Geométrica}
+\subsection*{3.3 Distribuição Geométrica}
 \label{s13}
 
 \begin{definition}
@@ -504,7 +504,7 @@ Aqui trata-se de conteúdo do ensino médio em caso de dúvida \href{https://pt.
     $$Var (X) = \frac{q}{p^2}$$
 \end{corollary}
 
-\subsubsection*{3.4 Distribuição Binomial Negativa}
+\subsection*{3.4 Distribuição Binomial Negativa}
 \label{s14}
 
 \begin{definition}
@@ -555,7 +555,7 @@ Aqui trata-se de conteúdo do ensino médio em caso de dúvida \href{https://pt.
     onde $p = \dfrac{r}{N}$
 \end{corollary}
 
-\section{4 Variáveis Aleatórias Continuas}
+\section*{4 Variáveis Aleatórias Continuas}
 \label{s17}
 
 \subsection*{4.1 Distribuições Contínuas}
@@ -670,7 +670,7 @@ $$g(y) d y = f(x) d x$$
     Esse teorema está definido em 2.4, de forma igual.
 \end{theorem}
 
-\section{5 Principais Distribuições Contínuas}
+\section*{5 Principais Distribuições Contínuas}
 \label{s20}
 
 \subsection*{5.1 Distribuição Uniforme}
@@ -806,7 +806,7 @@ $$P(Z \leq t) = 1 - P(X < n) = 1 - e^{- \lambda t} \sum_{k = 0}^{n-1} \frac{(\la
     $$\lambda(t) = \lim_{\Delta t \rightarrow{} 0} TMF = \dfrac{F'(t)}{1 - F(t)} = - \dfrac{R'(t)}{R(t)}$$
 \end{definition}
 
-\section{6 Variáveis Aleatórias Contínuas Bidimensionais}
+\section*{6 Variáveis Aleatórias Contínuas Bidimensionais}
 \label{s26}
 
 \subsection*{6.1 Função de Densidade Conjunta}
@@ -901,7 +901,7 @@ $$P(Z \leq t) = 1 - P(X < n) = 1 - e^{- \lambda t} \sum_{k = 0}^{n-1} \frac{(\la
     \end{array} \right |$$
 \end{theorem}
 
-\section{7 Somas e Médias de Variáveis Aleatórias}
+\section*{7 Somas e Médias de Variáveis Aleatórias}
 \label{s30}
 
 \subsection*{7.0 Motivação}
@@ -1002,7 +1002,7 @@ isto é, a distribuição $X^*$ se aproxima (em áreas) da distribuição normal
 
 Não tem nada aqui (só aplicações) pode seguir...
 
-\section{8 Outras Distribuições Amostrais}
+\section*{8 Outras Distribuições Amostrais}
 \label{s35}
 
 \subsection*{8.1 Estimação de Parâmetros}
@@ -1156,7 +1156,7 @@ Este é um estimador não-viesado.
     $$T = \frac{\overline{X} - \mu}{\sigma / \sqrt{n}} \backsim t(n - 1)$$
 \end{theorem}
 
-\section{Dado em aula}
+\section*{Dado em aula}
 \subsection*{Gerar variável aleatória}
 \begin{theorem}
     Seja F uma função de distribuição cumulativa continua e estritamente crescente.
