--- a/2 periodo/AlgLin.tex
+++ b/2 periodo/AlgLin.tex
@@ -45,7 +45,7 @@
 \vfill
 \begin{center}
 {{\normalsize Rio de Janeiro}\\
-{\normalsize \the\year}}
+{\normalsize 2020}}
 \end{center}
 \end{titlepage}
 
