--- a/2 periodo/Analise.tex
+++ b/2 periodo/Analise.tex
@@ -43,7 +43,7 @@
 \vfill
 \begin{center}
 {{\normalsize Rio de Janeiro}\\
-{\normalsize \the\year}}
+{\normalsize 2020}}
 \end{center}
 \end{titlepage}
 
